# sky

./: .gitignore  CS_ProposalCover.pages  Log  Proposal.pages  README.md  paper.txt  shaderfrog.frag  shaderfrog.vert  shaderfrog.vs  sky.sublime-project  sky.sublime-workspace
AtmosTest/: AtmosTest.cpp  AtmosTest.props  AtmosTest.vcxproj  AtmosTest.vcxproj.filters
gpu-gems-16/: 3DBuffer.h  AtmosphereTest.dsp  AtmosphereTest.dsw  AtmosphereTest.props  AtmosphereTest.sln  AtmosphereTest.vcxproj  AtmosphereTest.vcxproj.filters  CMakeLists.txt  Common.cg  DateTime.h  Font.h  GLUtil.cpp  GLUtil.h  GameApp.cpp  GameApp.h  GameEngine.cpp  GameEngine.h  Glew.props  Glfw.props  GroundFromAtmosphere.vert  GroundFromAtmosphereCg.frag  GroundFromAtmosphereCg.vert  GroundFromSpaceCg.vert  HDRCg.vert  HDRRect.frag  HDRRectCg.frag  HDRSquareCg.frag  HdrSky.cpp  HdrSky.h  ListTemplates.h  Log.h  Master.h  Math.h  Math_.h  Matrix.cpp  Matrix.h  Noise.cpp  Noise.h  OpenGLApp.cpp  OpenGLApp.h  (+37 more)
gpu-gems-16/jpeg/: UpgradeLog.htm  jccoefct.c  jccolor.c  jcsample.c  jctrans.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdmerge.c  jdpostct.c  jdsample.c  jerror.h  jinclude.h  jmemmgr.c  jmemnobs.c  jmorecfg.h  jquant1.c  jquant2.c  jversion.h  libjpeg.sln  libjpeg.vcproj  libjpeg.vcxproj  libjpeg.vcxproj.filters  transupp.c
gpu-gems-16/tfgl/: App.cpp  App.h  Buffer.h  Exception.cpp  Exception.h  LICENSE  Program.cpp  Program.h  ScopedBinder.h  Shader.cpp  Shader.h  VertexArrayObject.cpp
pyglet/: test.py
raycast/: CMakeLists.txt  GroundSphere.glsl  Raycast.cpp  SinglePass.glsl  SkySphere.glsl  Test.glsl  Trackball.cpp  TwoPass.glsl  Utility.cpp  Utility.h  perlin.c  perlin.h  pez.h  pez.win.c
raycast/simplex/: simplexnoise.cpp  simplexnoise.h  simplextextures.cpp  simplextextures.h
renders/: parse_results.py  session-1-params.txt  session-1.txt  session-2-params.txt  session-2.txt  session-3-params.txt  session-3.txt  session-4-params.txt  session-4.txt  session-5-params.txt  session-5.txt  session-6-params.txt  session-6.txt  session-8-params.txt  session-9-params.txt
testbed/: CMakeLists.txt
testbed/src/: Testbed.h  gl.frag  gl.vert  testbed.cpp
tfgl/: App.cpp  App.h  Buffer.cpp  Buffer.h  Exception.cpp  Exception.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Types.h  VertexArrayObject.h
